--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: libz-dev, gettext,
  dh-exec (>= 0.7),
  dh-apache2,
  dpkg-dev (>= 1.16.2~)
-Build-Depends-Indep: asciidoc, xmlto, docbook-xsl
+Build-Depends-Indep: asciidoc (>= 8.6.10), xmlto, docbook-xsl
 Standards-Version: 4.1.1.1
 Homepage: https://git-scm.com/
 Vcs-Git: https://repo.or.cz/r/git/debian.git/
