debian/rules: exclude .gitattributes from contrib installation
Noticed by Lintian:

 package-contains-vcs-control-file

 The package contains a VCS control file such as .(cvs|git|hg)ignore.
 This file is generally useless in an installed package and was
 probably installed by accident.

Signed-off-by: Jonathan Nieder <jrnieder@gmail.com>

--- a/debian/rules
+++ b/debian/rules
@@ -149,6 +149,7 @@ override_dh_installdocs-arch:
 	rm -f '$(GIT)'/usr/share/doc/git/contrib/subtree/git-subtree.1
 	rm -f '$(GIT)'/usr/share/doc/git/contrib/subtree/git-subtree.html
 	rm -f '$(GIT)'/usr/share/doc/git/contrib/subtree/git-subtree.xml
+	find '$(GIT)'/usr/share/doc/git/ -name .gitattributes | xargs rm -f
 	find '$(GIT)'/usr/share/doc/git/ -name .gitignore | xargs rm -f
 
 override_dh_installdocs-indep:
